# sisci-perf

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  run.sh
charts/: charts.ipynb
initiator/: CMakeLists.txt  broadcast_dma.c  broadcast_dma.h  broadcast_pio.c  broadcast_pio.h  dma_vec.c  dma_vec.h  initiator_main.c  initiator_main.h  interleaved_dmas.c  interleaved_dmas.h  ping_pong_pio.c  ping_pong_pio.h  scale_out_pio.c  scale_out_pio.h  scale_up_out_pio.c  scale_up_out_pio.h  scale_up_pio.c  scale_up_pio.h  simple_data_interrupt.c  simple_data_interrupt.h  simple_dma.c  simple_dma.h  simple_interrupt.c  simple_interrupt.h  simple_pio.c  simple_pio.h  var_size_dma.c  var_size_dma.h  var_size_pio.c  var_size_pio.h  var_size_segments.c  var_size_segments.h
lib/: CMakeLists.txt  block_for_termination_signal.c  block_for_termination_signal.h  common.c  common.h  common_read_write_functions.c  common_read_write_functions.h  error_util.c  error_util.h  lib_dma.c  lib_dma.h  lib_rma.c  lib_rma.h  print_node_id.c  print_node_id.h  printfo.c  printfo.h  protocol.h  sisci_arg_types.h  sisci_glob_defs.h  timer_controlled_variable.c  timer_controlled_variable.h
peer/: CMakeLists.txt  peer_main.c  peer_main.h  ping_pong_thread.c  ping_pong_thread.h
src/: args_parser.c  args_parser.h  client.c  dma.c  dma.h  main.c  rdma_buff.h  receiver.c  rma.c  rma.h  rnid_util.c  rnid_util.h  sender.c  server.c
standalone/: ping-pong-client.c  ping-pong-common.h  ping-pong-server.c
standalone/memcpy/: client.c  common.c  common.h  server.c
tools/: CMakeLists.txt  charts.ipynb  ioctl.supp  print_node_id.c  print_node_id_from_hostname.c  valgrind_command.txt
